--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="titles">Me</h1>
-    <div class="intro"><p><span class="start">👋</span>, I'm Nils. I'm a <span class="span">self-made</span> hobby developer from Krefeld, Germany.<br>
+    <div class="intro"><p><span class="start">👋</span>, I'm Nils. I'm a <span class="span">self-made</span> hobby developer from Germany.<br>
         On this website, I will present me and my projects:<br><br>
         My main programming language is <a href="https://python.org/download">Python</a> but I also know some HTML and CSS as you can see.</p></div>
 </body>
